# emptyesp32

https/: CMakeLists.txt  Makefile  Readme.md
https/fs/config/: config.json  whitelist.json
https/main/: App.cpp  App.h  CMakeLists.txt  Config.cpp  Config.h  JsonServer.cpp  JsonServer.h  Kconfig.projbuild  Network.cpp  Network.h  Ota.cpp  Ota.h  Secure.cpp  Secure.h  StableTime.cpp  WebServer.cpp  WebServer.h  WhatsApp.cpp  WhatsApp.h  component.mk  ftpserv.cpp  ftpserv.h  generate_build_date  secrets.h.sample
